# api/booking.go
@@ -404,3 +404,191 @@ func (server *Server) adminGetListBookingValidated(ctx *gin.Context) {
 	}
 	ctx.JSON(http.StatusOK, result)
 }
+
+// @Summary Admin Get List Booking Confirmed
+// @ID adminGetListBookingConfirmed
+// @Produce json
+// @Accept json
+// @Tags Admin
+// @Security bearerAuth
+// @Success 200 {object} listBookingResponse
+// @Failure 400 {string} error
+// @Failure 401 {string} error
+// @Failure 404 {string} error
+// @Failure 500 {string} error
+// @Router /api/admin/list_booking_confirmed/ [get]
+func (server *Server) adminGetListBookingConfirmed(ctx *gin.Context) {
+	var result listBookingResponse
+	bookings, err := server.store.AdminListBooking(ctx, "confirmed")
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	for _, booking := range bookings {
+
+		user, err := server.store.GetUser(ctx, booking.UserBooking)
+		if err != nil {
+			ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+			return
+		}
+		userResult := newUserResponse(user)
+
+		payment, err := server.store.GetPaymentByBookingID(ctx, booking.BookingID)
+		if err != nil {
+			ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+			return
+		}
+
+		promotion, err := server.store.GetPromotion(ctx, booking.PromotionID)
+		if err != nil {
+			ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+			return
+		}
+
+		homestay, err := server.store.GetHomestay(ctx, booking.HomestayBooking)
+		if err != nil {
+			ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+			return
+		}
+
+		duration := booking.CheckoutDate.Sub(booking.CheckinDate)
+		numofday := int32(duration.Hours() / 24)
+		homestayfee := float64(numofday) * homestay.Price
+
+		var surchargeCapacity float64
+		var amount float64
+		if booking.NumberOfGuest > homestay.Capacity {
+			surchargeCapacity = float64(booking.NumberOfGuest-homestay.Capacity) * 10
+			amount = (surchargeCapacity + homestayfee + booking.ServiceFee)
+		} else {
+			surchargeCapacity = 0
+			amount = homestayfee + booking.ServiceFee
+		}
+
+		tax := booking.Tax * amount
+
+		detail := db.DetailPayment{
+			UserBooking:       booking.UserBooking,
+			HomestayBooking:   booking.HomestayBooking,
+			CheckinDate:       booking.CheckinDate.String(),
+			Discount:          promotion.DiscountPercent,
+			NumberOfDay:       numofday,
+			NumberOfGuest:     booking.NumberOfGuest,
+			Tax:               tax,
+			ServiceFee:        booking.ServiceFee,
+			SurchargeCapacity: surchargeCapacity,
+			HomestayFee:       homestayfee,
+			TotalAmount:       payment.Amount,
+		}
+
+		result.ListBooking = append(result.ListBooking, struct {
+			Booking         db.Booking       `json:"booking"`
+			UserBooking     userResponse     `json:"user_booking"`
+			HomestayBooking db.Homestay      `json:"homestay_booking"`
+			Payment         db.Payment       `json:"payment"`
+			DetailPayment   db.DetailPayment `json:"detail_payment"`
+		}{booking, userResult, homestay, payment, detail})
+	}
+	ctx.JSON(http.StatusOK, result)
+}
+
+type getBookingRequest struct {
+	BookingID string `uri:"booking_id" binding:"required,alphanum"`
+}
+
+// @Summary Admin Confirmed Booking
+// @ID adminConfirmedBooking
+// @Produce json
+// @Accept json
+// @Tags Admin
+// @Param booking_id path string true "BookingID"
+// @Security bearerAuth
+// @Success 200 {object} listBookingResponse
+// @Failure 400 {string} error
+// @Failure 401 {string} error
+// @Failure 404 {string} error
+// @Failure 500 {string} error
+// @Router /api/admin/confirmed_booking [put]
+func (server *Server) adminConfirmedBooking(ctx *gin.Context) {
+	var result listBookingResponse
+	var req getBookingRequest
+
+	if err := ctx.ShouldBindUri(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, errorResponse(err))
+		return
+	}
+
+	booking, err := server.store.UpdateBookingStatus(ctx, db.UpdateBookingStatusParams{
+		BookingID: req.BookingID,
+		Status: "confirmed",
+	})
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+	user, err := server.store.GetUser(ctx, booking.UserBooking)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+	userResult := newUserResponse(user)
+
+	payment, err := server.store.GetPaymentByBookingID(ctx, booking.BookingID)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	promotion, err := server.store.GetPromotion(ctx, booking.PromotionID)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	homestay, err := server.store.GetHomestay(ctx, booking.HomestayBooking)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	duration := booking.CheckoutDate.Sub(booking.CheckinDate)
+	numofday := int32(duration.Hours() / 24)
+	homestayfee := float64(numofday) * homestay.Price
+
+	var surchargeCapacity float64
+	var amount float64
+	if booking.NumberOfGuest > homestay.Capacity {
+		surchargeCapacity = float64(booking.NumberOfGuest-homestay.Capacity) * 10
+		amount = (surchargeCapacity + homestayfee + booking.ServiceFee)
+	} else {
+		surchargeCapacity = 0
+		amount = homestayfee + booking.ServiceFee
+	}
+
+	tax := booking.Tax * amount
+
+	detail := db.DetailPayment{
+		UserBooking:       booking.UserBooking,
+		HomestayBooking:   booking.HomestayBooking,
+		CheckinDate:       booking.CheckinDate.String(),
+		Discount:          promotion.DiscountPercent,
+		NumberOfDay:       numofday,
+		NumberOfGuest:     booking.NumberOfGuest,
+		Tax:               tax,
+		ServiceFee:        booking.ServiceFee,
+		SurchargeCapacity: surchargeCapacity,
+		HomestayFee:       homestayfee,
+		TotalAmount:       payment.Amount,
+	}
+
+	result.ListBooking = append(result.ListBooking, struct {
+		Booking         db.Booking       `json:"booking"`
+		UserBooking     userResponse     `json:"user_booking"`
+		HomestayBooking db.Homestay      `json:"homestay_booking"`
+		Payment         db.Payment       `json:"payment"`
+		DetailPayment   db.DetailPayment `json:"detail_payment"`
+	}{booking, userResult, homestay, payment, detail})
+
+	ctx.JSON(http.StatusOK, result)
+}
